--- a/app/eventyay/control/templates/pretixcontrol/orders/overview.html
+++ b/app/eventyay/control/templates/pretixcontrol/orders/overview.html
@@ -41,14 +41,7 @@
                 {% bootstrap_field filter_form.date_until layout='inline' %}
             </div>
             <div class="col-lg-2 col-sm-6 col-xs-6">
-                <div class="form-group" style="gap: 20px; display: flex;">
-                    <button class="btn btn-primary" type="submit">
-                        <span class="fa fa-filter"></span>
-                    </button>
-                    <a href="?" class="btn btn-default">
-                        <span class="fa fa-eraser"></span>
-                    </a>
-                </div>
+                {% include "eventyay_common/filter_actions.html" %}
             </div>
         </form>
     </div>
