--- a/app/eventyay/control/templates/pretixcontrol/organizers/giftcards.html
+++ b/app/eventyay/control/templates/pretixcontrol/organizers/giftcards.html
@@ -32,14 +32,7 @@
                 {% bootstrap_field filter_form.state layout='inline' %}
             </div>
             <div class="col-md-2 col-sm-6 col-xs-12">
-                <div class="form-group" style="gap: 20px; display: flex;">
-                    <button class="btn btn-primary" type="submit">
-                        <span class="fa fa-filter"></span>
-                    </button>
-                    <a href="?" class="btn btn-default">
-                        <span class="fa fa-eraser"></span>
-                    </a>
-                </div>
+                {% include "eventyay_common/filter_actions.html" %}
             </div>
         </form>
         <p>
