--- a/app/eventyay/control/templates/pretixcontrol/user/orders.html
+++ b/app/eventyay/control/templates/pretixcontrol/user/orders.html
@@ -12,16 +12,9 @@
                     <!-- Add the event filter here -->
                     {% bootstrap_field filter_form.event layout='inline' %}
                 </div>
-                <div class="col-md-2 col-xs-6">
-                    <div class="form-group" style="gap: 20px; display: flex;">
-                        <button type="submit" class="btn btn-primary">
-                            <span class="fa fa-filter"></span>
-                        </button>
-                        <a href="?" class="btn btn-default">
-                            <span class="fa fa-eraser"></span>
-                        </a>
-                    </div>
-                </div>
+                        <div class="col-md-2 col-xs-6">
+                            {% include "eventyay_common/filter_actions.html" %}
+                        </div>
             </form>
         </div>
         <div class="table-responsive">
