--- a/app/eventyay/control/templates/control/bbb_moveroom.html
+++ b/app/eventyay/control/templates/control/bbb_moveroom.html
@@ -12,7 +12,7 @@
     </p>
     <div class="video-admin-btn-row">
         <button type="submit" class="btn btn-warning"><span class="fa fa-exchange"></span> {% trans "Move" %}</button>
-        <a href="{% url 'control:bbbserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+        <a href="{% url 'eventyay_admin:video_admin:bbbserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
     </div>
 </form>
 {% endblock %}
