--- a/app/eventyay/control/templates/control/conftool_syncposters.html
+++ b/app/eventyay/control/templates/control/conftool_syncposters.html
@@ -29,7 +29,7 @@
             <button type="submit" class="btn btn-primary">
                 <span class="fa fa-refresh"></span> {% trans "Sync" %}
             </button>
-            <a href="{% url 'control:systemlog.list' %}" class="btn btn-default">{% trans "Back" %}</a>
+            <a href="{% url 'eventyay_admin:video_admin:systemlog.list' %}" class="btn btn-default">{% trans "Back" %}</a>
         </div>
     </form>
 {% endif %}
