--- a/app/eventyay/control/templates/control/event_clear.html
+++ b/app/eventyay/control/templates/control/event_clear.html
@@ -12,7 +12,7 @@
         <button type="submit" class="btn btn-danger">
             <span class="fa fa-trash"></span> {% trans "Delete" %}
         </button>
-        <a href="{% url 'control:event.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+        <a href="{% url 'eventyay_admin:video_admin:event.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
     </div>
 </form>
 {% endblock %}
