--- a/app/eventyay/control/templates/control/event_create.html
+++ b/app/eventyay/control/templates/control/event_create.html
@@ -66,7 +66,7 @@
                 <span class="fa fa-save"></span> {% trans "Save" %}
             {% endif %}
         </button>
-        <a href="{% url 'control:event.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+        <a href="{% url 'eventyay_admin:video_admin:event.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
     </div>
 </form>
 {% endblock %}
