--- a/app/eventyay/control/templates/control/event_update.html
+++ b/app/eventyay/control/templates/control/event_update.html
@@ -80,7 +80,7 @@
         <button type="submit" class="btn btn-primary">
             <span class="fa fa-save"></span> {% trans "Save" %}
         </button>
-        <a href="{% url 'control:event.list' %}" class="btn btn-default">{% trans "Back" %}</a>
+        <a href="{% url 'eventyay_admin:video_admin:event.list' %}" class="btn btn-default">{% trans "Back" %}</a>
     </div>
     <hr>
     <label>{% trans "JWT config" %}</label>
