--- a/app/eventyay/control/templates/control/janus_delete.html
+++ b/app/eventyay/control/templates/control/janus_delete.html
@@ -8,7 +8,7 @@
     <p>{% blocktrans with id=server.url %}Are you sure you want to delete {{ id }}?{% endblocktrans %}</p>
     <div class="video-admin-btn-row">
         <button type="submit" class="btn btn-danger"><span class="fa fa-trash"></span> {% trans "Delete" %}</button>
-        <a href="{% url 'control:janusserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+        <a href="{% url 'eventyay_admin:video_admin:janusserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
     </div>
 </form>
 {% endblock %}
