--- a/app/eventyay/control/templates/control/janus_form.html
+++ b/app/eventyay/control/templates/control/janus_form.html
@@ -13,7 +13,7 @@
         <button type="submit" class="btn btn-primary">
             <span class="fa fa-save"></span> {% trans "Save" %}
         </button>
-        <a href="{% url 'control:janusserver.list' %}" class="btn btn-default">
+        <a href="{% url 'eventyay_admin:video_admin:janusserver.list' %}" class="btn btn-default">
             {% trans "Cancel" %}
         </a>
     </div>
