--- a/app/eventyay/control/templates/control/systemlog_list.html
+++ b/app/eventyay/control/templates/control/systemlog_list.html
@@ -22,7 +22,7 @@
         <td>{{ s.event }}</td>
         <td>{{ s.message }}</td>
         <td class="text-right video-admin-actions">
-            <a href="{% url 'control:systemlog.detail' pk=s.pk %}" class="btn btn-default btn-xs">
+            <a href="{% url 'eventyay_admin:video_admin:systemlog.detail' pk=s.pk %}" class="btn btn-default btn-xs">
                 <span class="fa fa-search"></span> {% trans "Details" %}
             </a>
         </td>
