--- a/app/eventyay/control/templates/control/turn_delete.html
+++ b/app/eventyay/control/templates/control/turn_delete.html
@@ -10,7 +10,7 @@
         <button type="submit" class="btn btn-danger">
             <span class="fa fa-trash"></span> {% trans "Delete" %}
         </button>
-        <a href="{% url 'control:turnserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+        <a href="{% url 'eventyay_admin:video_admin:turnserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
     </div>
 </form>
 {% endblock %}
