--- a/app/eventyay/control/templates/control/user_update.html
+++ b/app/eventyay/control/templates/control/user_update.html
@@ -8,7 +8,7 @@
     <div class="form-body">{{ form.as_p }}</div>
     <div class="video-admin-btn-row">
         <button type="submit" class="btn btn-primary"><span class="fa fa-save"></span> {% trans "Save" %}</button>
-        <a href="{% url 'control:user.list' %}" class="btn btn-default">{% trans "Back" %}</a>
+        <a href="{% url 'eventyay_admin:video_admin:user.list' %}" class="btn btn-default">{% trans "Back" %}</a>
     </div>
 </form>
 {% endblock %}
