fix voucher page wrapping issue

--- a/app/eventyay/control/templates/pretixcontrol/vouchers/index.html
+++ b/app/eventyay/control/templates/pretixcontrol/vouchers/index.html
@@ -20,15 +20,16 @@
         {% endblocktrans %}
     </p>
     <div class="row filter-form">
-        <form class="col-lg-2 col-sm-6 col-xs-6"
-              action="{% url "control:event.vouchers.go" event=request.event.slug organizer=request.event.organizer.slug %}">
-            <div class="input-group">
-                <input type="text" name="code" class="form-control" placeholder="{% trans "Voucher code" %}" autofocus>
-                <span class="input-group-btn">
-                    <button class="btn btn-primary" type="submit">{% trans "Go!" %}</button>
-                </span>
-            </div>
-        </form>
+        <div class="col-lg-2 col-sm-6 col-xs-6">
+            <form action="{% url "control:event.vouchers.go" event=request.event.slug organizer=request.event.organizer.slug %}">
+                <div class="input-group">
+                    <input type="text" name="code" class="form-control" placeholder="{% trans "Voucher code" %}" autofocus>
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="submit">{% trans "Go!" %}</button>
+                    </span>
+                </div>
+            </form>
+        </div>
         <form class="" action="" method="get">
             <div class="col-lg-2 col-sm-3 col-xs-6">
                 {% bootstrap_field filter_form.search layout='inline' %}
@@ -54,7 +55,7 @@
             <div class="col-lg-1 col-sm-6 col-xs-6">
                 {% bootstrap_field filter_form.qm layout='inline' %}
             </div>
-            <div class="col-lg-2 col-sm-6 col-xs-6">
+            <div class="col-lg-1 col-sm-6 col-xs-6">
                 {% include "eventyay_common/filter_actions.html" %}
             </div>
         </form>
