--- a/app/eventyay/presale/templates/pretixpresale/event/index.html
+++ b/app/eventyay/presale/templates/pretixpresale/event/index.html
@@ -135,7 +135,7 @@
 
     {% if request.event.has_subevents %}
         {% if not subevent %}
-            {% if event_logo and request.event.settings.logo_show_title %}
+            {% if event_logo_image and request.event.settings.logo_show_title %}
                 <h2 class="content-header">
                     {{ event.name }}
                 </h2>
@@ -196,7 +196,7 @@
             {% endif %}
         {% endif %}
     {% else %}
-        {% if event_logo and request.event.settings.logo_show_title %}
+        {% if event_logo_image and request.event.settings.logo_show_title %}
             <h2 class="content-header">
                 {{ event.name }}
                 {% if request.event.settings.show_dates_on_frontpage %}
@@ -204,7 +204,7 @@
                 {% endif %}
             </h2>
         {% endif %}
-        {% if not event_logo %}
+        {% if not event_logo_image %}
             <h2 class="content-header">
                 {{ event.name }}
                 {% if request.event.settings.show_dates_on_frontpage %}
