--- a/app/eventyay/presale/templates/pretixpresale/event/base.html
+++ b/app/eventyay/presale/templates/pretixpresale/event/base.html
@@ -36,8 +36,8 @@
         </div>
     {% endif %}
     {% if event.settings.event_logo_image %}
-        <div class="event_logo_img_placement">
-            <img src="{{ event.settings.event_logo_image.url }}" alt="{% translate 'Event logo' %}" class="img-fluid event_logo_image">
+        <div class="event-logo-img-placement">
+            <img src="{{ event.settings.event_logo_image.url }}" alt="{% translate 'Event logo' %}" class="img-fluid event-logo-image">
         </div>
     {% endif %}
     <div class="container page-header-links {% if event.settings.theme_color_background|upper != "#FFFFFF" or event.settings.logo_image_large %}page-header-links-outside{% endif %}">
