--- a/app/eventyay/static/pretixpresale/scss/_event.scss
+++ b/app/eventyay/static/pretixpresale/scss/_event.scss
@@ -156,6 +156,30 @@ section.front-page {
         color: white;
     }
 }
+.offline-banner-absolute {
+    position: absolute;
+    top: 0;
+}
+.event-logo-img-placement {
+    margin: 0 12%;
+}
+.event-logo-image {
+    max-height: 140px;
+    max-width: 240px;
+    width: auto;
+    border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+    .event-logo-image {
+        max-height: 120px;
+        max-width: 120px;
+        width: auto;
+        border-radius: 10px;
+        margin-bottom: 10px;
+    }
+}
+
 #questions_group .panel-title a {
     line-height: 22px;
 }
