--- a/app/eventyay/presale/templates/pretixpresale/event/order.html
+++ b/app/eventyay/presale/templates/pretixpresale/event/order.html
@@ -184,7 +184,7 @@
     {% include "pretixpresale/event/fragment_downloads.html" with position_page=False %}
     <div class="panel panel-primary cart">
         <div class="panel-heading">
-            {% if order.can_modify_answers %}
+            {% if can_modify_order %}
                 <div class="pull-right flip">
                     <a href="{% eventurl event "presale:event.order.modify" secret=order.secret order=order.code %}" aria-label="{% trans "Change ordered items" %}">
                         <span class="fa fa-edit" aria-hidden="true"></span>
@@ -278,7 +278,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     {% if invoice_address_asked or request.event.settings.invoice_name_required %}
-                        {% if order.can_modify_answers %}
+                        {% if can_modify_order %}
                             <div class="pull-right flip">
                                 <a href="{% eventurl event "presale:event.order.modify" secret=order.secret order=order.code %}" aria-label="{% trans "Change your information" %}">
                                     <span class="fa fa-edit" aria-hidden="true"></span>
