ensure same fonts across all components

--- a/app/eventyay/features/live/templates/live/short_domain_invalid.html
+++ b/app/eventyay/features/live/templates/live/short_domain_invalid.html
@@ -3,10 +3,10 @@
 <head>
     <title>{% trans "Invalid link" %}</title>
     <style>
-			body {
-				text-align: center;
-				font-family: 'Roboto', "Helvetica Neue", HelveticaNeue, Helvetica, Arial, "Microsoft Yahei", "微软雅黑", STXihei, "华文细黑", sans-serif;
-			}
+		body {
+			text-align: center;
+			font-family: 'Open Sans', "OpenSans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", STXihei, "华文细黑", sans-serif;
+		}
 
 			a, a:visited {
 				color: #0058DE;
