--- a/app/eventyay/static/control/style.css
+++ b/app/eventyay/static/control/style.css
@@ -2,7 +2,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: "Open Sans", "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
     background-color: #f4f7fa;
 }
