--- a/app/eventyay/static/common/css/_fonts.css
+++ b/app/eventyay/static/common/css/_fonts.css
@@ -1,4 +1,40 @@
 @font-face {
+    font-family: 'Open Sans';
+    src: url("/static/fonts/opensans_regular_macroman/OpenSans-Regular-webfont.woff2") format("woff2"),
+         url("/static/fonts/opensans_regular_macroman/OpenSans-Regular-webfont.woff") format("woff");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url("/static/fonts/opensans_bold_macroman/OpenSans-Bold-webfont.woff2") format("woff2"),
+         url("/static/fonts/opensans_bold_macroman/OpenSans-Bold-webfont.woff") format("woff");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url("/static/fonts/opensans_italic_macroman/OpenSans-Italic-webfont.woff2") format("woff2"),
+         url("/static/fonts/opensans_italic_macroman/OpenSans-Italic-webfont.woff") format("woff");
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url("/static/fonts/opensans_bolditalic_macroman/OpenSans-BoldItalic-webfont.woff2") format("woff2"),
+         url("/static/fonts/opensans_bolditalic_macroman/OpenSans-BoldItalic-webfont.woff") format("woff");
+    font-weight: 700;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
   font-family: "Titillium Web";
   font-style: normal;
   font-weight: 600;
@@ -82,9 +118,9 @@
 
 :root {
   --font-fallback:
-    "Open Sans", "OpenSans", "Helvetica Neue", Helvetica, system-ui, sans-serif;
-  --font-family: "Muli", var(--font-fallback);
-  --font-family-title: "Titillium Web", var(--font-fallback);
+    "Open Sans", "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family: "Open Sans", var(--font-fallback);
+  --font-family-title: "Open Sans", var(--font-fallback);
   --font-family-monospace:
     SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
     monospace;
@@ -105,7 +141,7 @@ button,
 summary.btn {
   &:not(.font-text) {
     font-family: var(--font-family-title);
-    font-weight: 600;
+    font-weight: 500;
   }
 }
 code,
