--- a/app/eventyay/presale/templates/pretixpresale/event/index.html
+++ b/app/eventyay/presale/templates/pretixpresale/event/index.html
@@ -34,40 +34,7 @@
         </script>
     {% endautoescape %}
     <main aria-label="{% if show_cart %}{% trans "Your cart, general information, add products to your cart" %}{% else %}{% trans "General information, add products to your cart" %}{% endif %}">
-        <nav id="schedule-nav"{% if with_margin %} class="p-3"{% endif %}>
-            <div class="navigation">
-                {% if request.event.settings.talk_schedule_public %}
-                    <div class="navigation-button">
-                        <a href="{{ request.event.talk_schedule_url }}" class="header-nav btn btn-outline-success">
-                            <i class="fa fa-calendar"></i> {% trans "Schedule" %}
-                        </a>
-                    </div>
-                    <div class="navigation-button">
-                        <a href="{{ request.event.talk_session_url }}" class="header-nav btn btn-outline-success">
-                            <i class="fa fa-comments-o"></i> {% trans "Sessions" %}
-                        </a>
-                    </div>
-                    <div class="navigation-button">
-                        <a href="{{ request.event.talk_speaker_url }}" class="header-nav btn btn-outline-success">
-                            <i class="fa fa-group"></i> {% trans "Speakers" %}
-                        </a>
-                    </div>
-                {% endif %}
-                <div class="navigation-button">
-                    <a target="_blank" class="header-nav btn btn-outline-success" data-toggle="popover">
-                        <i class="fa fa-ticket"></i> {% trans "Tickets" %}
-                    </a>
-                </div>
-                {% if is_video_plugin_enabled %}
-                    <div class="video-link">
-                        <a join-event-link class="header-nav btn btn-outline-success join-event"
-                            href='{% eventurl request.event "presale:event.onlinevideo.join" %}'>
-                            <i class="fa fa-video-camera"></i> {% trans "Join online event" %}
-                        </a>
-                    </div>
-                {% endif %}
-            </div>
-        </nav>
+    {% include "pretixpresale/event/fragment_nav.html" with with_margin=with_margin is_video_plugin_enabled=is_video_plugin_enabled %}
     {% if show_cart %}
         <details class="panel panel-primary cart" open>
             <summary class="panel-heading">
