--- a/app/eventyay/static/pretixcontrol/scss/main.scss
+++ b/app/eventyay/static/pretixcontrol/scss/main.scss
@@ -10,6 +10,7 @@
 @import "_flags.scss";
 @import "_orders.scss";
 @import "_dashboard.scss";
+@import "_sidebar.scss";
 @import "../../pretixbase/scss/webfont.scss";
 @import "../../fileupload/jquery.fileupload.scss";
 @import "../../leaflet/leaflet.scss";
