--- a/app/eventyay/eventyay_common/templates/eventyay_common/base.html
+++ b/app/eventyay/eventyay_common/templates/eventyay_common/base.html
@@ -95,6 +95,10 @@
             data-select2-locale="{{ select2locale }}" data-longdateformat="{{ js_long_date_format }}" class="nojs">
         <div id="wrapper">
             <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+                <button type="button" class="navbar-toggle-sidebar navbar-toggle" id="sidebar-toggle" data-toggle="sidebar">
+                    <span class="sr-only">{% trans "Toggle sidebar" %}</span>
+                    <i class="fa fa-bars fa-lg"></i>
+                </button>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle"
                             data-toggle="collapse" data-target=".navbar-nav-collapse">
